<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:gravity="center_vertical"
              android:orientation="vertical">

  <TextView
      style="?android:attr/listSeparatorTextViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/header_visit_information"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_site_name"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_user_name"
      android:inputType="textPersonName"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_user_phone_number"
      android:inputType="phone"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_user_email"
      android:inputType="textEmailAddress"/>

  <TextView
      style="?android:attr/listSeparatorTextViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/header_species"/>

  <ListView
      android:id="@+id/species_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"/>


</LinearLayout>